--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
           <option value="Toronto">Toronto</option>
+          <option value="Santiago">Santiago</option>
         </select>
       </li>
       <li>
@@ -81,6 +82,7 @@
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
+          <option value="Chile">Chile</option>
           <option value="Venezuela">Venezuela</option>
         </select>
       </li>
